--- a/TradeFX/src/stage/CandleStickChart.css
+++ b/TradeFX/src/stage/CandleStickChart.css
@@ -2,7 +2,6 @@
 
 .chart {
     -fx-background-color: black;   
-    -fx-font-size: 1.4em;  
 }
 .chart-plot-background {
     -fx-background-color: black;
@@ -25,8 +24,8 @@
 }
 
 .axis {
-    -fx-font-size: 1.4em;    	
-    -fx-tick-label-fill: white;
+    -fx-font-size: 1.4em;    
+    -fx-tick-label-fill: #914800;
     -fx-font-family: Tahoma;
     -fx-tick-length: 10;
     -fx-minor-tick-length: 5;
@@ -34,7 +33,7 @@
 
 .candlestick-tooltip-label {
 
-    -fx-font-size: 1.75em;
+    -fx-font-size: 0.75em;
 
     -fx-font-weight: bold;
 
