--- a/TradeFX/src/gui/view/CandleStickChart.css
+++ b/TradeFX/src/gui/view/CandleStickChart.css
@@ -1,11 +1,11 @@
 /* ====== CANDLE STICK CHART =========================================================== */
 
 .chart {
-    -fx-background-color: black;   
+    -fx-background-color: lightgrey;   
     -fx-font-size: 1.4em;  
 }
 .chart-plot-background {
-    -fx-background-color: black;
+    -fx-background-color: lightgrey;
 }
 
 .chart-vertical-grid-lines {
@@ -26,7 +26,7 @@
 
 .axis {
     -fx-font-size: 1.4em;    	
-    -fx-tick-label-fill: white;
+    -fx-tick-label-fill: black;
     -fx-font-family: Tahoma;
     -fx-tick-length: 10;
     -fx-minor-tick-length: 5;
